k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myworkspace
  labels:
    app.kubernetes.io/name: myworkspace
    app.kubernetes.io/part-of: myworkspace
