k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myworkspace-backend
  namespace: myworkspace
  labels:
    app: myworkspace-backend
spec:
  type: ClusterIP
  ports:
    - port: 4000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: myworkspace-backend
