k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myworkspace-frontend
  namespace: myworkspace
  labels:
    app: myworkspace-frontend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: myworkspace-frontend
